[package]
name = "sgp4"
version = "0.7.0"
authors = ["International Centre for Neuromorphic Systems", "Alexandre Marcireau"]
description = "A pure Rust implementation of the SGP4 algorithm for satellite propagation"
homepage = "https://github.com/neuromorphicsystems/sgp4/"
repository = "https://github.com/neuromorphicsystems/sgp4/"
readme = "README.md"
license = "MIT"
keywords = ["SGP4", "SDP4", "TLE", "OMM"]
categories = ["science"]
edition = "2021"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"
toml = "0.5"
ureq = {version = "2.5", features = ["json"]}

[[bench]]
name = "propagate"
harness = false

[profile.release]
lto = true
codegen-units = 1
