[package]
name = "sgp4"
version = "0.9.1"
authors = [
    "International Centre for Neuromorphic Systems",
    "Alexandre Marcireau",
]
description = "A pure Rust implementation of the SGP4 algorithm for satellite propagation"
homepage = "https://github.com/neuromorphicsystems/sgp4/"
repository = "https://github.com/neuromorphicsystems/sgp4/"
readme = "README.md"
license = "MIT"
categories = [
    "aerospace",
    "algorithms",
    "no-std",
    "parser-implementations",
    "science",
]
keywords = ["SGP4", "SDP4", "TLE", "OMM"]
edition = "2021"

[dependencies]
anyhow = {version = "1.0", default-features = false, optional = true}
chrono = {version = "0.4", default-features = false}
serde = {version = "1.0", default-features = false, optional = true}
serde_json = {version = "1.0", default-features = false, optional = true}
num-traits = {version = "0.2", default-features = false, optional = true}

[dev-dependencies]
criterion = "0.4"
toml = "0.7"
ureq = {version = "2.6", features = ["json"]}

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["alloc", "serde", "std"]
alloc = ["anyhow"]
serde = ["alloc", "chrono/serde", "serde/alloc", "serde/derive", "serde_json/alloc"]
std = ["alloc", "anyhow/std", "chrono/std", "serde?/std", "serde_json?/std"]
libm = ["num-traits/libm"]

[[bench]]
name = "propagate"
harness = false

[profile.release]
lto = true
codegen-units = 1
